Elemento patronos en la página de proyecto

--- a/view/css/project/view.css
+++ b/view/css/project/view.css
@@ -2,6 +2,7 @@
 @import url('widget/summary.css');
 @import url('widget/media.css');
 @import url('widget/share.css');
+@import url('widget/patrons.css');
 @import url('widget/message.css');
 @import url('widget/support.css');
 @import url('widget/needs.css');
