--- a/view/css/header.css
+++ b/view/css/header.css
@@ -54,7 +54,6 @@ div#sub-header{
 
 div#sub-header.banners{
     padding:0;
-	margin-bottom: 32px;
 }
 
 div#sub-header-secondary{
@@ -133,6 +132,7 @@ div#sub-header > div > div.slides_container > div.slides_control > div.subhead-b
 	font: bold 14px Helvetica, Arial, Geneva, sans-serif;
     margin: 0px;
     text-transform: uppercase;
+    width: 255px;
 }
 
 div#sub-header > div > div.slides_container > div.slides_control > div.subhead-banner .shb-info small{
@@ -185,8 +185,10 @@ div#sub-header > div > div.slides_container > div.slides_control > div.subhead-b
 	font-size: 11px;
     font-weight: normal;
 	list-style:none;
-	margin: -25px 0 0 20px;
+	margin: 0 0 0 20px;
 	padding:0;
+    position: relative;
+    top: -35px;
 }
 
 div#sub-header > div > div.slides_container > div.slides_control > div.subhead-banner .shb-info .financ-meter li{
@@ -271,7 +273,7 @@ div#sub-header > div > div.mod-pojctopen > .modpo-percent{
 
 div#sub-header > div > div.mod-pojctopen > .modpo-whyopen{
 	font: bold 14px Helvetica, Arial, Geneva, sans-serif;
-	padding:8px 0 0 35px;
+	padding:6px 0 0 50px;
 }
 /* fin de lo de open */
 
