Enlace a darse de baja en el accede Numero de mensajes total en menu pagina proyecto

--- a/view/css/user/login.css
+++ b/view/css/user/login.css
@@ -158,11 +158,14 @@ body.user-login .sign-in-with {
     background: #aaa;
 }
 
-.login > div a {
+.login > div a.baja {
 	float: right;
-	font-size: 11px;
 	position: relative;
 	bottom: 5px;
+}
+
+.login > div a {
+	font-size: 11px;
 	color: #999999;
 }
 
