Nodos: estructura, desarrollo y maquetacion Arreglos y datos de pruebas

--- a/view/css/admin/view.css
+++ b/view/css/admin/view.css
@@ -137,10 +137,7 @@ body.admin div#main > div.admin-center > div.widget.feed div.subitem{padding-lef
 body.admin div#main > div.admin-center > div.widget.feed div.subitem > span.datepub{float:left;width:100px;margin-right:10px;clear:none;line-height:1.2em}
 body.admin div#main > div.admin-center > div.widget.feed div.subitem > div.content-pub{float:left;width:600px;clear:none;margin-top:0;}
 
-/* Capando el superform
-
-
-*/
+/* Capando el superform */
 body.admin div#main div.admin-center div.superform {
     float: left;
 }
@@ -158,4 +155,10 @@ body.admin div#main div.admin-center div.superform div.elements > ol > li.requir
 body.admin div#main div.admin-center div.superform div.elements > ol > li.busy > .title {
     margin: 0 !important;
     background: none !important;
+}
+
+/* Reestilando botones */
+body.admin div#main div.admin-center input[type="submit"],
+body.admin div#main div.admin-center a.button {
+    padding: 0.2em 0.4em !important;
 }
