--- a/view/css/home.css
+++ b/view/css/home.css
@@ -21,6 +21,11 @@ body.home div#main div.widget.projects div.widget.project{
 	margin: 0 40px 42px 0;
 }
 
+/* Estilos para entradas de blog en portada,
+ Se añaden reglas para usarlos en la portada de nodo
+ Los que no sean identicos en la portada de nodo no se les pone la regla y se definen en /view/css/node/home.css
+*/
+body.node.home div#node-news ul.slderpag,
 body.home div#main div.learn ul.slderpag {
     margin: 8px 0 0 0;
 	list-style:none;
@@ -29,6 +34,7 @@ body.home div#main div.learn ul.slderpag {
 	height:auto;
 }
 
+body.node.home div#node-news ul.slderpag li,
 body.home div#main div.learn ul.slderpag li {
     cursor:pointer;
     display: block;
@@ -37,6 +43,7 @@ body.home div#main div.learn ul.slderpag li {
 	margin: 0px 4px 5px 4px;
 }
 
+body.node.home div#node-news ul.slderpag li a,
 body.home div#main div.learn ul.slderpag li a {
     width: 12px;
     height: 6px;
@@ -46,16 +53,20 @@ body.home div#main div.learn ul.slderpag li a {
 	display:block;
 }
 
+body.node.home div#node-news ul.slderpag li a:hover,
 body.home div#main div.learn ul.slderpag li a:hover {
     background-color: #20b3b2;
     color: #20b3b2;
 }
 
+body.node.home div#node-news ul.slderpag li.current a,
 body.home div#main div.learn ul.slderpag li.current a {
     background-color: #808184 !important;
     color: #808184 !important;
 }
 
+body.node.home div#node-news a.next,
+body.node.home div#node-news a.prev,
 body.home div#main div.learn a.next,
 body.home div#main div.learn a.prev {
     width: 16px;
@@ -68,34 +79,34 @@ body.home div#main div.learn a.prev {
 /*	display: inline-block; */
 }
 
+body.node.home div#node-news a.prev,
 body.home div#main div.learn a.prev {
 	background: url('small_arrowslider-sprt.png') scroll no-repeat 0 0;
 }
 
+body.node.home div#node-news a.prev:hover,
 body.home div#main div.learn a.prev:hover {
 	background: url('small_arrowslider-sprt.png') scroll no-repeat 0 -32px;
 }
 
+body.node.home div#node-news a.next,
 body.home div#main div.learn a.next{
 	background: url('small_arrowslider-sprt.png') scroll no-repeat 0 -16px;
 }
 
+body.node.home div#node-news a.next:hover,
 body.home div#main div.learn a.next:hover {
 	background: url('small_arrowslider-sprt.png') scroll no-repeat 0 -48px;
 }
 
-body.home div#main div.learn div.slder_container {
-    width:900px;
-	height:290px;
-	display:none;
-}
-
+body.home div#main div.learn div.slder_container,
 body.home div#main div.learn  div.slder_container div.slder_slide {
     width:900px;
 	height:290px;
 	display:block;
 }
 
+body.node.home div#node-news  div.slder_container div.slder_slide . div.post,
 body.home div#main div.learn  div.slder_container div.slder_slide . div.post {
     position: relative;
     min-height: 305px;
@@ -103,12 +114,14 @@ body.home div#main div.learn  div.slder_container div.slder_slide . div.post {
     display: none;
 }
 
-body.home div#main div.learn div.slder_container div.slder_slide div.post div.read_more{
+body.home div#main div.learn div.slder_container div.slder_slide div.post div.read_more {
     bottom: 10px;
     right: 20px;
     position: absolute;
 }
 
+body.node.home div#node-news div.slder_container div.slder_slide div.post h3,
+body.node.home div#node-news div.slder_container div.slder_slide div.post div.description,
 body.home div#main div.learn div.slder_container div.slder_slide div.post h3,
 body.home div#main div.learn div.slder_container div.slder_slide div.post div.description {
 	float: left;
@@ -124,6 +137,29 @@ body.home div#main div.learn div.slder_container div.slder_slide div.post div.im
     width: 500px;
     height: 285px;
 }
+
+body.node.home div#node-news div.slder_container div.slder_slide div.post div.author,
+body.home div#main div.learn div.slder_container div.slder_slide div.post div.author {
+	float: left;
+    margin: -5px 0 0 20px;
+    width: 380px;
+	line-height: 12px;
+	text-transform:none;
+}
+
+body.node.home div#node-news div.slder_container div.slder_slide div.post div.author a,
+body.home div#main div.learn div.slder_container div.slder_slide div.post div.author a {
+    font-size: 11px;
+    text-decoration: none;
+    color: #20B2B3;
+}
+
+body.node.home div#node-news div.slder_container div.slder_slide div.post div.author a:hover,
+body.home div#main div.learn div.slder_container div.slder_slide div.post div.author a:hover {
+    text-decoration: underline;
+}
+
+/* Hasta aqui las reglas para compartir estilos para blog en portada del nodo*/
 
 body.home div#main div.widget.projects {
     overflow: hidden;
