--- a/view/css/home.css
+++ b/view/css/home.css
@@ -81,22 +81,22 @@ body.home div#main div.learn a.prev {
 
 body.node.home div#node-news a.prev,
 body.home div#main div.learn a.prev {
-	background: url('small_arrowslider-sprt.png') scroll no-repeat 0 0;
+	background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 0;
 }
 
 body.node.home div#node-news a.prev:hover,
 body.home div#main div.learn a.prev:hover {
-	background: url('small_arrowslider-sprt.png') scroll no-repeat 0 -32px;
+	background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 -32px;
 }
 
 body.node.home div#node-news a.next,
 body.home div#main div.learn a.next{
-	background: url('small_arrowslider-sprt.png') scroll no-repeat 0 -16px;
+	background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 -16px;
 }
 
 body.node.home div#node-news a.next:hover,
 body.home div#main div.learn a.next:hover {
-	background: url('small_arrowslider-sprt.png') scroll no-repeat 0 -48px;
+	background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 -48px;
 }
 
 body.home div#main div.learn div.slder_container,
@@ -367,6 +367,7 @@ div#campaigns a.next {
     left: 894px;
     bottom: 137px;
 }
+/* fin chunguerias del position */
 
 /* patronos */
 div#slides_patrons div.slder_patrons,
@@ -389,25 +390,24 @@ div#slides_patrons div.arrow-right {
     margin-left: 0px;
     padding-top: 46px;
 }
-/* fin chunguerias del position */
 
 div.patronrow a.prev,
 div.callrow a.prev {
-	background: url('arrowslider-sprt.png') scroll no-repeat 0 0;
+	background: url('/view/css/arrowslider-sprt.png') scroll no-repeat 0 0;
 }
 
 div.patronrow a.prev:hover,
 div.callrow a.prev:hover {
-	background: url('arrowslider-sprt.png') scroll no-repeat 0 -48px;
+	background: url('/view/css/arrowslider-sprt.png') scroll no-repeat 0 -48px;
 }
 
 div.patronrow a.next,
 div.callrow a.next {
-	background: url('arrowslider-sprt.png') scroll no-repeat 0 -24px;
+	background: url('/view/css/arrowslider-sprt.png') scroll no-repeat 0 -24px;
 }
 
 div.patronrow a.next:hover,
 div.callrow a.next:hover {
-	background: url('arrowslider-sprt.png') scroll no-repeat 0 -72px;
+	background: url('/view/css/arrowslider-sprt.png') scroll no-repeat 0 -72px;
 }
 /* Fin de las flechitas de convocatorias y patronos en portada */
