--- a/view/css/node/header.css
+++ b/view/css/node/header.css
@@ -151,7 +151,7 @@ div#header div#menu > ul > li.info {
     width: 35px;
     height: 40px;
     position: absolute;
-    left: 0;
+    left: -1px;
     bottom: 0;
     background-color: #dee1df;
 }
@@ -168,35 +168,25 @@ div#header div#menu > ul > li.info > a {
     margin: 9px 6px 8px;
 }
 
-div#header div#menu > ul > li.info > a.open {
-    background: url('/view/css/header/node_info.png') no-repeat left center transparent;
-}
-
-div#header div#menu > ul > li.info > a.open:hover {
-    background: url('/view/css/header/node_info.png') no-repeat right center transparent;
-}
-
-div#header div#menu > ul > li.info > a.close {
-    background: url('/view/css/header/node_info_close.png') no-repeat left center transparent;
-}
-
-div#header div#menu > ul > li.info > a.close:hover {
-    background: url('/view/css/header/node_info_close.png') no-repeat right center transparent;
-}
+/* Pestaña de información/cerrar banner */
+div#header div#menu > ul > li.info > a.open{background:url('/view/css/header/node_info_close.png') no-repeat left center transparent} /*si está abierto mostrar cerrar*/
+div#header div#menu > ul > li.info > a.open:hover{background:url('/view/css/header/node_info_close.png') no-repeat right center transparent}
+div#header div#menu > ul > li.info > a.close{background:url('/view/css/header/node_info.png') no-repeat left center transparent}/*si está cerrado mostrar abrir*/
+div#header div#menu > ul > li.info > a.close:hover{background:url('/view/css/header/node_info.png') no-repeat right center transparent}
+/* Fin de pestaña de información/cerrar banner */
 
 /* Banners de nodo */
-body.home.node div#header div#node-banners{display:block!important;
-border:#dee2e6 1px solid;border-top:none}
-div#header div#node-banners{height:270px;width:940px;display:none;margin:0 auto}
+body.home.node div#header div#node-banners{border:#dee2e6 1px solid;border-top:none}
+div#header div#node-banners{height:270px;width:940px;margin:0 auto}
 div#header div#node-banners{
-	-webkit-box-shadow: -1px 2px 10px rgba(50, 50, 50, 0.6);
--moz-box-shadow:    -1px 2px 10px rgba(50, 50, 50, 0.6);
-box-shadow:         -1px 2px 10px rgba(50, 50, 50, 0.6);
+-webkit-box-shadow:0px 2px 3px rgba(44, 50, 51, 0.4);
+-moz-box-shadow:0px 2px 3px rgba(44, 50, 51, 0.4);
+box-shadow:0px 2px 3px rgba(44, 50, 51, 0.4);
 }
 div#header div#node-banners div.node-banners-container{height:270px;background:url('/view/css/header/node-banner-bg.jpg')}
-div.node-banners-container > div.node-banner{position:relative;height:270px}
-div.node-banners-container > div.node-banner > div.title{position:absolute;top:25px;left:50px;line-height:25px;font-size:25px;color:#585a5c}
-div.node-banners-container > div.node-banner > div.short-desc{position:absolute;top:75px;left:50px;line-height:30px;font-size:20px;color:#1f81bb;max-width:530px}
+div.node-banners-container div.node-banner{height:245px;padding:25px 0 0 50px;}
+div.node-banners-container div.node-banner > div.title{margin-bottom:32px;line-height:25px;font-size:25px;color:#585a5c}
+div.node-banners-container div.node-banner > div.short-desc{line-height:30px;font-size:20px;color:#1f81bb;max-width:530px}
 
 div.node-banner.sample{background:url('/view/css/header/banner-node-bg-sample.png') no-repeat right bottom}
 
