--- a/view/css/node/header.css
+++ b/view/css/node/header.css
@@ -92,83 +92,19 @@ div#node-header div.logos div.node-logo span {
 }
 
 /* botonera */
-div#header div#menu > ul > li > a.button {
-    padding: .4em .8em .4em .8em !important;
-}
-
-div#header div#menu > ul > li.info,
-div#header div#menu > ul > li.help {
-    float: left;
-}
-
-div#header div#menu > ul > li.help {
-	margin-right: 4px;
-}
-
-div#header div#menu > ul > li.explore > a {
-	margin-left: 42px !important;
-}
-
-div#header div#menu > ul > li.help > a {
-    padding: .4em 1.8em .4em .8em;
-    font-size: 12px;
-    color: white;
-    display: inline-block;
-    margin: .68em .2em .6em 0;
-    max-width: 7.5em;
-    text-align: left;
-	width:80px;
-	line-height: 1em;
-}
-
-div#header div#menu > ul > li.about {
-    height: 48px;
-    position: relative;
-	top:3px;
-    
-}
-
-div#header div#menu > ul > li.about > a {
-    padding: .5em 0 !important;
-    font-size: 12px;
-    height: 40px;
-    line-height: 40px;
-    display: inline-block;
-    color: #59595c;
-    padding-right:30px;
-	position:relative;
-	top:-3px;
-    
-}
-
-div#header div#menu > ul > li.about a:hover {
-    color: #20B2B3;
-}
-
-/* pestaña info */
-div#header div#menu > ul > li.info {
-    border-radius: 5px 5px 0px 0px;
-    width: 35px;
-    height: 40px;
-    position: absolute;
-    left: -1px;
-    bottom: 0;
-    background-color: #dee1df;
-}
-
-div#header div#menu > ul > li.info > a {
-    overflow: hidden;
-    text-indent: 2000px;
-    display: block;
-    line-height: 2000px;
-    width: 23px;
-    height: 23px;
-    left: 50%;
-    border: medium none;
-    margin: 9px 6px 8px;
-}
+div#header div#menu{position:relative;z-index:100}
+div#header div#menu > ul > li > a.button{padding:.4em .8em!important}
+div#header div#menu > ul > li.info,div#header div#menu > ul > li.help{float:left}
+div#header div#menu > ul > li.help{margin-right:4px}
+div#header div#menu > ul > li.explore > a{margin-left:42px!important}
+div#header div#menu > ul > li.help > a{font-size:12px;color:#FFF;display:inline-block;max-width:7.5em;text-align:left;width:80px;line-height:1em;margin:.68em .2em .6em 0;padding:.4em 1.8em .4em .8em}
+div#header div#menu > ul > li.about{height:48px;position:relative;top:3px}
+div#header div#menu > ul > li.about > a{font-size:12px;height:40px;line-height:40px;display:inline-block;color:#59595c;position:relative;top:-3px;padding:.5em 0!important}
+div#header div#menu > ul > li.about a:hover{color:#20B2B3}
 
 /* Pestaña de información/cerrar banner */
+div#header div#menu > ul > li.info{border-radius:5px 5px 0 0;width:35px;height:40px;position:absolute;left:-1px;bottom:0;background-color:#dee1df}
+div#header div#menu > ul > li.info > a{overflow:hidden;text-indent:2000px;display:block;line-height:2000px;width:23px;height:23px;left:50%;border:medium none;margin:9px 6px 8px}
 div#header div#menu > ul > li.info > a.open{background:url('/view/css/header/node_info_close.png') no-repeat left center transparent} /*si está abierto mostrar cerrar*/
 div#header div#menu > ul > li.info > a.open:hover{background:url('/view/css/header/node_info_close.png') no-repeat right center transparent}
 div#header div#menu > ul > li.info > a.close{background:url('/view/css/header/node_info.png') no-repeat left center transparent}/*si está cerrado mostrar abrir*/
@@ -176,49 +112,24 @@ div#header div#menu > ul > li.info > a.close:hover{background:url('/view/css/hea
 /* Fin de pestaña de información/cerrar banner */
 
 /* Banners de nodo */
-body.home.node div#header div#node-banners{border:#dee2e6 1px solid;border-top:none}
-div#header div#node-banners{height:270px;width:940px;margin:0 auto}
-div#header div#node-banners{
--webkit-box-shadow:0px 2px 3px rgba(44, 50, 51, 0.4);
--moz-box-shadow:0px 2px 3px rgba(44, 50, 51, 0.4);
-box-shadow:0px 2px 3px rgba(44, 50, 51, 0.4);
-}
-div#header div#node-banners div.node-banners-container{height:270px;background:url('/view/css/header/node-banner-bg.jpg');}
-div.node-banners-container div.node-banner{width:940px;height:270px;}
+body.home.node div#header div#node-banners{height:270px;width:940px;overflow:hidden /*NO CAMBIAR*/;margin:0 auto;border:#dee2e6 1px solid;border-top:none;border:#000 1px transparent !important /*no tocar o el contenido se alinea de forma extraña dentro del carrousel*/
+-webkit-box-shadow:0px 2px 3px rgba(44, 50, 51, 0.4);-moz-box-shadow:0px 2px 3px rgba(44, 50, 51, 0.4);box-shadow:0px 2px 3px rgba(44, 50, 51, 0.4);}
+div#header div#node-banners div.node-banners-container{height:270px;background:url('/view/css/header/node-banner-bg.jpg');overflow:visible !important/*NO CAMBIAR*/}
+div.node-banners-container div.node-banner{width:940px;height:270px;overflow:hidden}
 div.node-banners-container div.node-banner > div.title{padding-top: 25px; margin-left: 50px;line-height:25px;font-size:25px;color:#585a5c}
 div.node-banners-container div.node-banner > div.short-desc{margin-top: 25px; margin-left: 50px; line-height:30px;font-size:20px;color:#1f81bb; max-width: 450px;}
+div.node-banners-container div.node-banner.active > div.title{color:#20B2B3 !important;}
+div.node-banners-container div.node-banner a.expand {padding: 0;position: absolute;width: 940px;height: 270px;z-index: 99;}
 
-ul.bannerspage {
-	list-style:none;
-    border: 1px solid blue;
-    height: 20px;
-}
 
-ul.bannerspage li {
-    cursor:pointer;
-    display: block;
-    float: left;
-    overflow: hidden;
-	margin: 0px 4px 5px 4px;
-}
-
-ul.bannerspage li a {
-    width: 12px;
-    height: 12px;
-    margin-top: 2px;
-    background-color: #cdcdce;
-    color: #cdcdce;
-	display:block;
-}
-
-ul.bannerspage li a:hover {
-    background-color: #20b3b2;
-    color: #20b3b2;
-}
-
-ul.bannerspage li.current a {
-    background-color: #808184 !important;
-    color: #808184 !important;
-}
+/* paginación de los banners*/
+div#node-banners-controler{position: absolute;width: 940px;top: 440px;z-index:100;overflow:auto;height:auto;text-align:center}
+ul.bannerspage{list-style:none; z-index:100;  padding:0;  margin:0; display:inline-block}
+ul.bannerspage li{ cursor:pointer;  display:block;  float:left;  overflow:hidden; margin:0px 4px 5px 4px}
+ul.bannerspage li a{display:block;width:12px;height:12px;margin-top:2px; background-color:#d9cfd2;color:#d9cfd2;
+-webkit-border-radius: 100px;-moz-border-radius: 100px;border-radius: 100px;}
+ul.bannerspage li a:hover{ background-color:#808184;  color:#808184}
+ul.bannerspage li.current a{ background-color:#1f81bb !important;  color:#1f81bb !important}
+/* fin paginación de los banners*/
 
 /* Fin banners de nodo */
