--- a/view/css/footer.css
+++ b/view/css/footer.css
@@ -206,29 +206,33 @@ div#footer div.social li a:hover{
 	filter:alpha(opacity=70)
 }
 
+div#footer div.social li a{
+	background-image:url('/view/css/social/social-footer-20.png') !important;
+	background-repeat:no-repeat}
+	
 div#footer div.social li.twitter a {
     color: #6dc7eb;
-    background-image: url('/view/css/twitter.png');
+	background-position:0 -3px;    
 }
 
 div#footer div.social li.facebook a {
     color: #4e6091;
-    background-image: url('/view/css/facebook.png');
+	background-position:0 -24px;
 }
 
 div#footer div.social li.identica a {
     color: #c42f31;
-    background-image: url('/view/css/identica.png');
+	background-position:0 -45px;
 }
 
 div#footer div.social li.gplus a {
     color: #5075aa;
-    background-image: url('/view/css/google.png');
+	background-position:0 -66px;
 }
 
 div#footer div.social li.rss a {
     color: #ee8226;
-    background-image: url('/view/css/rss.png');
+	background-position:0 -89px;
 }
 
 
