--- a/view/css/node/header.css
+++ b/view/css/node/header.css
@@ -92,15 +92,22 @@ div#node-header div.logos div.node-logo span {
 }
 
 /* botonera */
-div#header div#menu{position:relative;z-index:100}
+div#header div#menu{position:relative;z-index:100;background:none repeat scroll 0 0 #2792C9 !important}
 div#header div#menu > ul > li > a.button{padding:.4em .8em!important}
+div#header div#menu > ul > li > a{color:#fff !important}
+div#header div#menu > ul > li.community, div#header div#menu > ul > li.dashboard{background:url('/view/css/header/down-white.png') no-repeat scroll right 30px transparent}
 div#header div#menu > ul > li.info,div#header div#menu > ul > li.help{float:left}
 div#header div#menu > ul > li.help{margin-right:4px}
 div#header div#menu > ul > li.explore > a{margin-left:42px!important}
-div#header div#menu > ul > li.help > a{font-size:12px;color:#FFF;display:inline-block;max-width:7.5em;text-align:left;width:80px;line-height:1em;margin:.68em .2em .6em 0;padding:.4em 1.8em .4em .8em}
+div#header div#menu > ul > li.help > a{font-size:12px;display:inline-block;max-width:7.5em;text-align:left;width:80px;line-height:1em;margin:.68em .2em .6em 0;padding:.4em 1.8em .4em .8em}
 div#header div#menu > ul > li.about{height:48px;position:relative;top:3px}
-div#header div#menu > ul > li.about > a{font-size:12px;height:40px;line-height:40px;display:inline-block;color:#59595c;position:relative;top:-3px;padding:.5em 0!important}
+div#header div#menu > ul > li.about > a{font-size:12px;height:40px;line-height:40px;display:inline-block;position:relative;top:-3px;padding:.5em 0!important}
+div#header div#menu > ul > li.about:hover{background:#1DB3B2}
 div#header div#menu > ul > li.about a:hover{color:#20B2B3}
+
+/*buscador*/
+div#header div#menu > ul > li.search fieldset{border: 1px solid #fff;}
+div#header div#menu > ul > li.search fieldset input[type="submit"]{background:url('/view/css/header/search-white.png') no-repeat scroll center center transparent !important}
 
 /* Pestaña de información/cerrar banner */
 div#header div#menu > ul > li.info{border-radius:5px 5px 0 0;width:35px;height:40px;position:absolute;left:-1px;bottom:0;background-color:#e9e5e2}
@@ -112,7 +119,7 @@ div#header div#menu > ul > li.info > a.close:hover{background:url('/view/css/hea
 /* Fin de pestaña de información/cerrar banner */
 
 /* Banners de nodo */
-div#header div#node-banners{width: 100%; height:270px; margin: 0; background:url('/view/css/header/node-banner-bg.jpg');overflow:hidden /*NO CAMBIAR*/;border:#dee2e6 1px solid;border-top:none;border:#000 1px transparent !important /*no tocar o el contenido se alinea de forma extraña dentro del carrousel*/
+div#header div#node-banners{width: 100%; height:270px; margin: 0; background:url('/view/css/header/node-banner-bg.jpg');overflow:hidden /*NO CAMBIAR*/;border:#dee2e6 1px solid;border-top:none;border:#000 1px transparent !important /*no tocar o el contenido se alinea de forma extraña dentro del carrousel*/;
 -webkit-box-shadow:0px 2px 3px rgba(44, 50, 51, 0.4);-moz-box-shadow:0px 2px 3px rgba(44, 50, 51, 0.4);box-shadow:0px 2px 3px rgba(44, 50, 51, 0.4);}
 div#header div#node-banners div.node-banners-container{width:940px;height:270px;margin:0 auto;overflow:visible !important/*NO CAMBIAR*/}
 div.node-banners-container div.node-banner{width:940px;height:270px;overflow:hidden}
